1999-05-07    <jaharkes@cs.cmu.edu>
	* Servers would assert when they got a connection from an unknown
	  userid.
	* Codacon couldn't bind to venus if only the loopback device was
	  available.
	* Added libdb2 detection, as it isn't 1.85 compatible (fileformat).
	* Reshuffled the tree a bit
	  resolve          -> librepair
	  res/rvmres 	   -> resolution
	  kernel-src/linux -> linux-coda (separate tree)
	* Correct lock ordering when breaking callbacks on multiple clients.
	* Replaced 'cfs bw' with 'cfs strong/adaptive'.
	* Corrected lock ordering when creating hardlinks.
	* Switched from gdbm to db-1.85.
	* Fixed loss of reintegration records after venus reinitialization.
	  This needed extra space in the RVM header, reinit your venus.
	* Caught several bugs related to partially cached objects.
	* Removed VM resolution, and fixed some bugs with RVM resolution.
	* Incorporated patches to get compiled on NetBSD 1.4
	* Using lower/upper bandwidth estimates to reduce weak-strong
	  changes when we are working at the weakly connected threshold.
	* owrite files with partial data were not discarded.
	* Fixed an endless loop in ViceNewFetch.
	* Gettimeofday on cygwin caused problems, added a workaround.
	* Updated kernel module with the 2.2.6/2.2.7 changes.
	* Fixes to kernel module refcounting.
	* Added statfs upcall, `df' now gives information about the cache
	  usage.
	* Fixed kernel oops when reading from /proc/fs/coda/upcall_stats.
	* Processes got stuck when writing to /proc/sys/coda/*_stats.
	* Increased the precision of the upcall stats timing
	  (echo 1 > /proc/net/upcall_stats to turn it on).
	* Got rid of 1000's of warnings when compiling with -Wall
	  (still not completely done yet).
	* Reduced server retry timeout to max. 15 seconds.
	* Finish trickle stores when switching to strong, instead of
	  resending the complete file.
	* Avoiding gethostbyname lookups if the vstab contains ip's.
	* Correctly comparing directories during resolve, this was the